--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/global.css">
+        <title>Cleere's Frogs</title>
+    </head>
+    <body>
+        <h1>Cleere's Frogs</h1>
+    </body>
 </html>
