--- a/Project-1-submission/about.html
+++ b/Project-1-submission/about.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/global.css">
+        <title>About Us</title>
+    </head>
+    <body>
+        <div>
+            <nav>
+                    <a href="home.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact-us.html">Contact Us</a>
+            </nav>
+        </div>
+        <p></p>
+        <h1>About Us</h1>
+        <p>
+            Cleere's Frogs is 
+        </p>
+    </body>
 </html>
