--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -7,6 +7,14 @@
         <title>Cleere's Frogs</title>
     </head>
     <body>
+        <div>
+            <nav>
+                    <a href="home.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact-us.html">Contact Us</a>
+            </nav>
+        </div>
+        <p></p>
         <h1>Cleere's Frogs</h1>
     </body>
 </html>
