added URLs and changes

--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -7,14 +7,22 @@
         <title>Cleere's Frogs</title>
     </head>
     <body>
-        <div>
+        <header>
+            <div>
+            <img src="img/frog-logo.jpg" alt="frog-logo.jpg" width="150" height="100">
+            </div>
+            <div>
             <nav>
                     <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
-        </div>
+            </div>
+            <div>
+            <h1 class="froggy">Cleere's Frogs</h1>
+            </div>
+        </header>
         <p></p>
-        <h1>Cleere's Frogs</h1>
+
     </body>
 </html>
