--- a/Project-1-submission/about.html
+++ b/Project-1-submission/about.html
@@ -7,15 +7,16 @@
         <title>About Us</title>
     </head>
     <body>
-        <div>
+        <header>
             <nav>
                     <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
-        </div>
+            <h1>About Us</h1>
+        </header>
         <p></p>
-        <h1>About Us</h1>
+
         <p>
             Cleere's Frogs is 
         </p>
