--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -7,14 +7,15 @@
         <title>Contact Us</title>
     </head>
     <body>
-        <div>
+        <header>
             <nav>
                     <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
-        </div>
+            <h1>Contact Us</h1>
+        </header>
         <p></p>
-        <h1>Contact Us</h1>
+
 
 </html>
