--- a/Project-1-submission/index.html
+++ b/Project-1-submission/index.html
@@ -13,7 +13,7 @@
             </div>
             <div>
             <nav>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
