small changes to logo and text

--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <div>
-            <img src="img/frog-logo.jpg" alt="frog-logo.jpg" width="150" height="100">
+            <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150">
             </div>
             <div>
             <nav>
-                    <a href="index.html">Home</a>
+                    <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
