--- a/Project-1-submission/about.html
+++ b/Project-1-submission/about.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav>
-                    <a href="index.html">Home</a>
+                    <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
