I forgot what i did here

--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div>
-            <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150">
+            <img class="header-logo" src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150">
             </div>
             <div>
             <nav>
@@ -19,7 +19,7 @@
             </nav>
             </div>
             <div>
-            <h1 class="froggy">Cleere's Frogs</h1>
+            <h1 class="header-text">Cleere's Frogs</h1>
             </div>
         </header>
         <p></p>
