--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -10,19 +10,51 @@
         <header>
             <div>
             <img class="header-logo" src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150">
-            </div>
-            <div>
             <nav>
                     <a href="home.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a href="contact-us.html">Contact Us</a>
             </nav>
             </div>
-            <div>
-            <h1 class="header-text">Cleere's Frogs</h1>
-            </div>
+            <h1>Cleere's Frogs</h1>
         </header>
-        <p></p>
-
+        <h2>sign up for our newsletter!</h2>
+        <form>
+            <table>
+              <tr>
+                <td align="right">First Name:</td>
+                <td align="left"><input type="text" name="first" /></td>
+              </tr>
+              <tr>
+                <td align="right">Last Name:</td>
+                <td align="left"><input type="text" name="last" /></td>
+              </tr>
+              <tr>
+                <td align="right">Email:</td>
+                <td align="left"><input type="text" name="email" /></td>
+              </tr>
+            </table>
+            <input type="submit" value="submit">
+          </form>
+         <p></p>
+         <div>
+            <table>
+              <tr>
+                <th>
+                  <a href="shop-frogs.html" style="font-family: sans-serif; font-size: x-large;">Frogs</a>
+                </th>
+                <th>
+                  <a href="shop-plants.html" style="font-family: sans-serif; font-size: x-large;">Plants</a>
+                </th>
+                <th>
+                  <a href="shop-feeders.html" style="font-family: sans-serif; font-size: x-large;">Feeders</a>
+                </th>
+             </tr>
+             <tr>
+              <td><img src="img/frog-icon2.png" alt="frog-icon2.png" width="250" height="250"></td>
+              <td><img src="img/plant-icon2.png" alt="plant-icon2.png" width="225" height="225"></td>
+              <td><img src="img/feeders-icon2.png" alt="feeders-icon2.png" width="200" height="200"></td>
+             </tr>
+        </div>
     </body>
 </html>
