--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -21,19 +21,19 @@
             <table>
               <tr>
                 <td align="right">First Name:</td>
-                <td align="left"><input type="text" name="first" /></td>
+                <td align="left"><input type="text" name="first"></td>
               </tr>
               <tr>
                 <td align="right">Last Name:</td>
-                <td align="left"><input type="text" name="last" /></td>
+                <td align="left"><input type="text" name="last"></td>
               </tr>
               <tr>
                 <td align="right">Email:</td>
-                <td align="left"><input type="text" name="email" /></td>
+                <td align="left"><input type="text" name="email"></td>
               </tr>
               <tr>
                 <td align="right">comments:</td>
-                <td align="left"><input type="text" name="comments" /></td>
+                <td align="left"><input type="text" name="comments"></td>
               </tr>
             </table>
             <input type="submit" value="submit">
