--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -23,15 +23,15 @@
             <table>
               <tr>
                 <td align="right">First Name:</td>
-                <td align="left"><input type="text" name="first" /></td>
+                <td align="left"><input type="text" name="first"></td>
               </tr>
               <tr>
                 <td align="right">Last Name:</td>
-                <td align="left"><input type="text" name="last" /></td>
+                <td align="left"><input type="text" name="last"></td>
               </tr>
               <tr>
                 <td align="right">Email:</td>
-                <td align="left"><input type="text" name="email" /></td>
+                <td align="left"><input type="text" name="email"></td>
               </tr>
             </table>
             <input type="submit" value="submit">
