finsihed main poject layout

--- a/Project-1-submission/about.html
+++ b/Project-1-submission/about.html
@@ -4,21 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
-        <title>About Us</title>
+        <title>Cleere's Frogs</title>
     </head>
     <body>
-        <header>
-            <nav>
-                    <a href="home.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <a href="contact-us.html">Contact Us</a>
-            </nav>
-            <h1>About Us</h1>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
+            <a href="home.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+        </nav>
+            <h1 class="center-text">About Us</h1>
         </header>
         <p></p>
 
-        <p>
-            Cleere's Frogs is 
+        <p class="paragraph-text">
+            Cleere's Frogs is a family-owned business that has been in operation for over 20 years. We specialize in exotic frogs and plants. Our frogs are bred in captivity and are not taken from the wild. We have a wide variety of frogs to choose from, including poison dart frogs, tree frogs, and other frogs. Our plants are also grown in captivity and are not taken from the wild. We have a wide variety of plants to choose from, including bareroot plants, mounted plants, and aquatic plants. We take pride in the quality of our frogs and plants and strive to provide the best customer service possible. Thank you for visiting our website and we hope you enjoy your shopping experience with us.
         </p>
     </body>
 </html>
