--- a/Project-1-submission/shop-plants.html
+++ b/Project-1-submission/shop-plants.html
@@ -4,29 +4,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
-<title>Cleere's Frogs</title>
+        <title>Cleere's Frogs</title>
     </head>
     <body>
-         <div>
-            <a><img src="img/logo.jpg" alt="logo.jpg" width="100" height="50"></a>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
-         </div>
-         <h1 style="color: darkgreen;">Cleere's Frogs</h1>
-         <p></p>
-        <h2 style="color: darkgreen;"> Plants </h2>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">bareroot plants</a>
-        <br>
-        <img src="img/bareroot-icon1.jpg" alt="bareroot-icon1" width="100" height="100">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">mounted plants</a>
-        <br>
-        <img src="img/mounted-icon1.jpg" alt="mounted-icon1" width="100" height="150">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">aquatic plants</a>
-        <br>
-        <img src="img/aquatic-icon1.jpg" alt="aquatic-icon1" width="100" height="100">
-         <p></p>
+        </nav>
+            <h1 class="center-text">Cleere's Frogs</h1>
+        </header>
+        <h2 class="center-text"> Plants </h2>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">bareroot plants</a>
+        </div>
+        <div class="center-text">
+            <img src="img/bareroot-icon1.jpg" alt="bareroot-icon1" width="150" height="175">
+        </div>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">mounted plants</a>
+        </div>
+        <div class="center-text">
+            <img src="img/mounted-icon1.jpg" alt="mounted-icon1" width="150" height="200">
+        </div>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">aquatic plants</a>
+        </div>
+        <div class="center-text">
+            <img src="img/aquatic-icon1.jpg" alt="aquatic-icon1" width="200" height="200">
+        </div>
+        <p>  </p>
     </body>
 </html>
