--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -4,39 +4,39 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
-        <title>Contact Us</title>
+        <title>Cleere's Frogs</title>
     </head>
     <body>
-        <header>
-            <nav>
-                    <a href="home.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <a href="contact-us.html">Contact Us</a>
-            </nav>
-            <h1>Contact Us</h1>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
+            <a href="home.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+        </nav>
         </header>
         <p></p>
-        <h2 style="color: darkgreen;">contact us</h2>
+        <h2 class="center-text">contact us</h2>
          <form>
-            <table>
+            <table class="center-text">
               <tr>
-                <td align="right">First Name:</td>
-                <td align="left"><input type="text" name="first"></td>
+                <td>First Name:</td>
+                <td><input type="text" name="first"></td>
               </tr>
               <tr>
-                <td align="right">Last Name:</td>
-                <td align="left"><input type="text" name="last"></td>
+                <td>Last Name:</td>
+                <td><input type="text" name="last"></td>
               </tr>
               <tr>
                 <td align="right">Email:</td>
                 <td align="left"><input type="text" name="email"></td>
               </tr>
               <tr>
-                <td align="right">comments:</td>
-                <td align="left"><input type="text" name="comments"></td>
+                <td>comments:</td>
+                <td><input type="text" name="comments"></td>
               </tr>
             </table>
-            <input type="submit" value="submit">
+            <div class="center-text">
+              <input type="submit" value="Submit">
+            </div>
           </form>
-
 </html>
