--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -7,20 +7,17 @@
         <title>Cleere's Frogs</title>
     </head>
     <body>
-        <header>
-            <div>
-            <img class="header-logo" src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150">
-            <nav>
-                    <a href="home.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <a href="contact-us.html">Contact Us</a>
-            </nav>
-            </div>
-            <h1>Cleere's Frogs</h1>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
+            <a href="home.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact-us.html">Contact Us</a>
+        </nav>
+            <h1 class="center-text">Cleere's Frogs</h1>
         </header>
-        <h2>sign up for our newsletter!</h2>
+        <h2 class="center-text">sign up for our newsletter!</h2>
         <form>
-            <table>
+            <table class="center-text">
               <tr>
                 <td align="right">First Name:</td>
                 <td align="left"><input type="text" name="first"></td>
@@ -34,12 +31,14 @@
                 <td align="left"><input type="text" name="email"></td>
               </tr>
             </table>
-            <input type="submit" value="submit">
+            <div class="center-text">
+              <input type="submit" value="submit">
+            </div>
           </form>
          <p></p>
          <div>
-            <table>
-              <tr>
+            <table class="center-text">
+              <tr class="table">
                 <th>
                   <a href="shop-frogs.html" style="font-family: sans-serif; font-size: x-large;">Frogs</a>
                 </th>
