--- a/Project-1-submission/shop-feeders.html
+++ b/Project-1-submission/shop-feeders.html
@@ -4,29 +4,35 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
-<title>Cleere's Frogs</title>
+        <title>Cleere's Frogs</title>
     </head>
     <body>
-         <div>
-            <a><img src="img/logo.jpg" alt="logo.jpg" width="100" height="50"></a>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
-         </div>
-         <h1 style="color: darkgreen;">Cleere's Frogs</h1>
-         <p></p>
-        <h2 style="color: darkgreen;"> Feeders </h2>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">crickets</a>
-        <br>
-        <img src="img/crickets-icon1.jpg" alt="crickets-icon1.jpg" width="100" height="100">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">beetles</a>
-        <br>
-        <img src="img/beetle-icon1.jpg" alt="beetles-icon1.jpg" width="100" height="100">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">worms</a>
-        <br>
-        <img src="img/worms-icon-1.jpg" alt="worms-icon1.jpg" width="100" height="100">
-         <p></p>
+        </nav>
+            <h1 class="center-text">Cleere's Frogs</h1>
+        </header>
+        <h2 class="center-text"> Feeders </h2>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">Crickets</a>
+        </div>
+        <div class="center-text">
+            <img src="img/crickets-icon1.jpg" alt="crickets-icon1" width="200" height="150">
+        </div>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">Worms</a>
+        </div>
+        <div class="center-text">
+            <img src="img/worms-icon-1.jpg" alt="worms-icon-1" width="175" height="150">
+        </div>
+        <div class="center-text">
+            <a class="img-text" style="font-family: sans-serif; font-size: x-large;">Beetles</a>
+        </div>
+        <div class="center-text">
+            <img src="img/beetle-icon1.jpg" alt="beetle-icon1" width="150" height="150">
+        </div>
     </body>
 </html>
