--- a/Project-1-submission/shop-frogs.html
+++ b/Project-1-submission/shop-frogs.html
@@ -4,29 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/global.css">
-<title>Cleere's Frogs</title>
+        <title>Cleere's Frogs</title>
     </head>
     <body>
-         <div>
-            <a><img src="img/logo.jpg" alt="logo.jpg" width="100" height="50"></a>
+        <nav class="navbar">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
-         </div>
-         <h1 style="color: darkgreen;">Cleere's Frogs</h1>
-         <p></p>
-        <h2 style="color: darkgreen;"> Frogs </h2>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">poison dart frogs</a>
-        <br>
-        <img src="img/dartfrog-icon1.jpg" alt="dartfrog-icon1" width="150" height="140">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">tree frogs</a>
-        <br>
-        <img src="img/tree-icon1.jpg" alt="tree-icon1.jpg" width="150" height="100">
-        <br>
-        <a href="" style="font-family: sans-serif; font-size: x-large;">other frogs</a>
-        <br>
-        <img src="img/other-icon1.jpg" alt="other-icon1" width="150" height="120">
-         <p></p>
+        </nav>
+        <div class="center-text">
+             <h1>Cleere's Frogs</h1>
+        </div>
+        <div>
+            <h2 class="center-text"> Shop Frogs </h2>
+        </div>
+            <div class="center-text">
+                <a class="img-text" style="font-family: sans-serif; font-size: x-large;">poison dart frogs</a>
+            </div>
+            <div class="center-text">
+                <img src="img/dartfrog-icon1.jpg" alt="dartfrog-icon1" width="150" height="120">
+            </div>
+            <div class="center-text">
+                <a class="img-text" style="font-family: sans-serif; font-size: x-large;">tree frogs</a>
+            </div>
+            <div class="center-text">
+                <img src="img/tree-icon1.jpg" alt="tree-icon1.jpg" width="150" height="100">
+            </div>
+            <div class="center-text">
+                <a class="img-text" style="font-family: sans-serif; font-size: x-large;">other frogs</a>
+            </div>
+            <div class="center-text">
+                <img src="img/other-icon1.jpg" alt="other-icon1" width="150" height="120">
+            </div>
     </body>
 </html>
