--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -16,7 +16,7 @@
         </header>
         <p></p>
         <h2 class="center-text">contact us</h2>
-         <form>
+         <form action="https://formspree.io/f/xpwqjrnn" method="post">
             <table class="center-text">
               <tr>
                 <td>First Name:</td>
