--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -16,7 +16,7 @@
             <h1 class="center-text">Cleere's Frogs</h1>
         </header>
         <h2 class="center-text">sign up for our newsletter!</h2>
-        <form>
+        <form action="https://formspree.io/f/xrbeakvz" method="post">
             <table class="center-text">
               <tr>
                 <td align="right">First Name:</td>
