carousel + final changes

--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <nav class="navbar">
-          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
+          <div>
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="40%vh" height="auto" style="position: absolute; left: 0;">
+          </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
@@ -35,7 +37,28 @@
               <input type="submit" value="submit">
             </div>
           </form>
-         <p></p>
+
+          <div class="container">
+            <div class="content">
+                <div class="slideshow">
+                    <button class="slide-btn slide-btn-1"></button>
+                    <button class="slide-btn slide-btn-2"></button>
+                    <div class="slideshow-wrapper">
+                        <div class="slide">
+                            <img class="slide-img"
+                                src="img/new-product-banner1.png" 
+                                alt="new-product-banner1.png">
+                        </div>
+                        <div class="slide">
+                            <img class="slide-img"
+                                src="img/Sale-banner1.jpg"
+                                alt="Sale-banner1.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
          <div>
             <table class="center-text">
               <tr class="table">
