--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
           <div>
-          <img src="img/frog-logo.png" alt="frog-logo.png" width="40%vh" height="auto" style="position: absolute; left: 0;">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" height="auto" style="position: absolute; left: 0;">
           </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
@@ -22,7 +22,7 @@
             <table class="center-text">
               <tr>
                 <td align="right">First Name:</td>
-                <td align="left"><input type="text" name="first"></td>
+                <td align="left"><input type="text" name="first" required></td>
               </tr>
               <tr>
                 <td align="right">Last Name:</td>
@@ -30,7 +30,7 @@
               </tr>
               <tr>
                 <td align="right">Email:</td>
-                <td align="left"><input type="text" name="email"></td>
+                <td align="left"><input type="text" name="email" required></td>
               </tr>
             </table>
             <div class="center-text">
