--- a/Project-1-submission/shop-feeders.html
+++ b/Project-1-submission/shop-feeders.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <nav class="navbar">
-          <img src="img/frog-logo.png" alt="frog-logo.png" width="400" height="150" style="position: absolute; left: 0;">
+            <div>
+                <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" height="auto" style="position: absolute; left: 0;">
+                </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
