--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -41,6 +41,19 @@
               <input type="submit" value="Submit">
             </div>
           </form>
-          
+          <div class="multi-column">
+            <p>
+            <img src="img/frog-jump1.png" alt="frog-jump1" width="100%" height="auto">
+            </p>
+            <p>
+            <img src="img/frog-jump2.png" alt="frog-jump2" width="100%vh" height="auto">
+            </p>
+            <p>
+            <img src="img/frog-jump3.png" alt="frog-jump3" width="100%vh" height="auto"> 
+            </p>
+            <p>
+            <img src="img/frog-jump4.png" alt="frog-jump4" width="100%vh" height="auto">
+            </p>
+          </div>
     </body>
 </html>
