--- a/Project-1-submission/shop-feeders.html
+++ b/Project-1-submission/shop-feeders.html
@@ -9,14 +9,13 @@
     <body>
         <nav class="navbar">
             <div>
-                <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" height="auto" style="position: absolute; left: 0;">
+                <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" style="position: absolute; left: 0;">
                 </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
             <h1 class="center-text">Cleere's Frogs</h1>
-        </header>
         <h2 class="center-text"> Feeders </h2>
         <div class="center-text">
             <a class="img-text" style="font-family: sans-serif; font-size: x-large;">Crickets</a>
