--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -9,13 +9,12 @@
     <body>
         <nav class="navbar">
           <div>
-            <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" height="auto" style="position: absolute; left: 0;">
+            <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" style="position: absolute; left: 0;">
             </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
-        </header>
         <p></p>
         <h2 class="center-text">contact us</h2>
          <form action="https://formspree.io/f/xpwqjrnn" method="post">
@@ -43,16 +42,16 @@
           </form>
           <div class="multi-column">
             <p>
-            <img src="img/frog-jump1.png" alt="frog-jump1" width="100%" height="auto">
+            <img src="img/frog-jump1.png" alt="frog-jump1" width="100%">
             </p>
             <p>
-            <img src="img/frog-jump2.png" alt="frog-jump2" width="100%vh" height="auto">
+            <img src="img/frog-jump2.png" alt="frog-jump2" width="100%vh">
             </p>
             <p>
-            <img src="img/frog-jump3.png" alt="frog-jump3" width="100%vh" height="auto"> 
+            <img src="img/frog-jump3.png" alt="frog-jump3" width="100%vh"> 
             </p>
             <p>
-            <img src="img/frog-jump4.png" alt="frog-jump4" width="100%vh" height="auto">
+            <img src="img/frog-jump4.png" alt="frog-jump4" width="100%vh">
             </p>
           </div>
     </body>
