--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -9,14 +9,13 @@
     <body>
         <nav class="navbar">
           <div>
-          <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" height="auto" style="position: absolute; left: 0;">
+          <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" style="position: absolute; left: 0;">
           </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact-us.html">Contact Us</a>
         </nav>
             <h1 class="center-text">Cleere's Frogs</h1>
-        </header>
         <h2 class="center-text">sign up for our newsletter!</h2>
         <form action="https://formspree.io/f/xrbeakvz" method="post">
             <table class="center-text">
@@ -77,6 +76,7 @@
               <td><img src="img/plant-icon2.png" alt="plant-icon2.png" width="225" height="225"></td>
               <td><img src="img/feeders-icon2.png" alt="feeders-icon2.png" width="200" height="200"></td>
              </tr>
+          </table>
         </div>
     </body>
 </html>
