--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -19,19 +19,19 @@
         <h2 class="center-text">contact us</h2>
          <form action="https://formspree.io/f/xpwqjrnn" method="post">
             <table class="center-text">
-              <tr>
+              <tr class="td-form">
                 <td>First Name:</td>
                 <td><input type="text" name="first" required></td>
               </tr>
-              <tr>
+              <tr class="td-form">
                 <td>Last Name:</td>
                 <td><input type="text" name="last"></td>
               </tr>
-              <tr>
-                <td align="right">Email:</td>
-                <td align="left"><input type="text" name="email" required></td>
+              <tr class="td-form">
+                <td>Email:</td>
+                <td><input type="text" name="email" required></td>
               </tr>
-              <tr>
+              <tr class="td-form">
                 <td>comments:</td>
                 <td><input type="text" name="comments" required></td>
               </tr>
