--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -19,17 +19,17 @@
         <h2 class="center-text">sign up for our newsletter!</h2>
         <form action="https://formspree.io/f/xrbeakvz" method="post">
             <table class="center-text">
-              <tr>
-                <td align="right">First Name:</td>
-                <td align="left"><input type="text" name="first" required></td>
+              <tr class="td-form">
+                <td>First Name:</td>
+                <td><input type="text" name="first" required></td>
               </tr>
-              <tr>
-                <td align="right">Last Name:</td>
-                <td align="left"><input type="text" name="last"></td>
+              <tr class="td-form">
+                <td>Last Name:</td>
+                <td><input type="text" name="last"></td>
               </tr>
-              <tr>
-                <td align="right">Email:</td>
-                <td align="left"><input type="text" name="email" required></td>
+              <tr class="td-form">
+                <td>Email:</td>
+                <td><input type="text" name="email" required></td>
               </tr>
             </table>
             <div class="center-text">
