validator attempt 3 no errors

--- a/Project-1-submission/contact-us.html
+++ b/Project-1-submission/contact-us.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
           <div>
-            <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" style="position: absolute; left: 0;">
+            <img class="logo" src="img/frog-logo.png" alt="frog-logo.png" style="position: absolute; left: 0;">
             </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
@@ -42,16 +42,16 @@
           </form>
           <div class="multi-column">
             <p>
-            <img src="img/frog-jump1.png" alt="frog-jump1" width="100%">
+            <img src="img/frog-jump1.png" alt="frog-jump1">
             </p>
             <p>
-            <img src="img/frog-jump2.png" alt="frog-jump2" width="100%vh">
+            <img src="img/frog-jump2.png" alt="frog-jump2">
             </p>
             <p>
-            <img src="img/frog-jump3.png" alt="frog-jump3" width="100%vh"> 
+            <img src="img/frog-jump3.png" alt="frog-jump3"> 
             </p>
             <p>
-            <img src="img/frog-jump4.png" alt="frog-jump4" width="100%vh">
+            <img src="img/frog-jump4.png" alt="frog-jump4">
             </p>
           </div>
     </body>
