--- a/Project-1-submission/home.html
+++ b/Project-1-submission/home.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
           <div>
-          <img src="img/frog-logo.png" alt="frog-logo.png" width="30%vh" style="position: absolute; left: 0;">
+            <img class="logo" src="img/frog-logo.png" alt="frog-logo.png" style="position: absolute; left: 0;">
           </div>
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
