--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -5,8 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 2 Submission</title>
         <link rel="stylesheet" href="./css/style.css">
+
     </head>
     <body>
-        
+      <h1></h1> 
+        <form>
+            <input type="text" id="input" placeholder="Search">
+            <button id= "searchButton">Giphy!</button><br>
+        </form>
+
+
+      <script src="./js/main.js"></script>
     </body>
 </html>
