--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -9,12 +9,29 @@
     </head>
     <body>
       <h1></h1> 
-        <form>
-            <input type="text" id="input" placeholder="Search">
-            <button id= "searchButton">Giphy!</button><br>
+      <div class="container">
+        <form id="searchForm">
+            <div>
+                <input id="searchInput" type="text" class="form-control" placeholder="Search for a gifs"
+                       aria-label="Recipient's username"
+                       aria-describedby="button-addon2">
+                <div>
+                    <button id="searchButton">Search</button>
+                </div>
+            </div>
         </form>
+        <div id="thumbs">
 
-
+        </div>
+    
+    </div>
+    <div class="loader-wrapper">
+        <div class="lds-circle"><div></div></div>
+    </div>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
       <script src="./js/main.js"></script>
     </body>
 </html>
