--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -5,33 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 2 Submission</title>
         <link rel="stylesheet" href="./css/style.css">
-
+        <script src="./js/index.js"></script>
     </head>
     <body>
-      <h1></h1> 
-      <div class="container">
-        <form id="searchForm">
+        <h1>Search for gifs!</h1> 
+        <form>
             <div>
-                <input id="searchInput" type="text" class="form-control" placeholder="Search for a gifs"
-                       aria-label="Recipient's username"
-                       aria-describedby="button-addon2">
-                <div>
-                    <button id="searchButton">Search</button>
-                </div>
+                <input>
+                <button></button>
+                <a></a>
             </div>
         </form>
-        <div id="thumbs">
+        <div>
 
         </div>
-    
-    </div>
-    <div class="loader-wrapper">
-        <div class="lds-circle"><div></div></div>
-    </div>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-      <script src="./js/main.js"></script>
+
     </body>
-</html>
+</html>    
