--- a/Project-2-submission/main.html
+++ b/Project-2-submission/main.html
@@ -5,19 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 2 Submission</title>
         <link rel="stylesheet" href="./css/style.css">
- 
+        <script src="./js/main.js"></script>
     </head>
     <body>
       <h1>Search for gifs!</h1> 
-        <div class="container">
+        <div>
             <form id="searchForm">
                 <div>
-                    <input id="searchInput" type="text" placeholder="Search for a gif!">
-                    <div>
-                        <button id="searchButton">Search</button>
-                    </div>
-                </div>
+                    <input type="text" id="txtsearch" placeholder="enter text to search" maxlength="25">
+                    <button onclick="btnSearch()">search</button>
+                    <a href="#" onclick="lnkClear()">clear</a>
+                </div>  
             </form>
-
+            <p></p>
+            <div id="divdisplayinfo" class="div-scroll-1">
+            </div>
+            <p></p>
+            <div>
+                <a href="#" onclick="giphyApiDemo1()">Giphy Api demo 1</a><br>            
+            </div>
+            <p></p>
 </body>
 </html>
