setup index + scss

--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -8,17 +8,24 @@
         <script src="./js/index.js"></script>
     </head>
     <body>
-        <h1>Search for gifs!</h1> 
-        <form>
-            <div>
-                <input>
-                <button></button>
-                <a></a>
-            </div>
-        </form>
-        <div>
+        <main class="global-center-page">
+            <h1>Search for gifs!</h1> 
 
-        </div>
-
+            <form>
+                <div>
+                    <input type="text" id="TxtSearch" placeholder="Enter Text To Search" maxlength="25">
+                    <button>search</button>
+                    <a href="#">clear</a>
+                </div>
+            </form>
+            <p></p>
+                <div id="divdisplayinfo" class="div-scroll-1">
+                    </div>
+                </div>
+            <p></p>
+            <footer class="global-footer">
+                <p>Powered by Giphy Coded by Kailyn Cleere 2025</p>
+            </footer>
+        </main>
     </body>
 </html>    
