--- a/Project-2-submission/main.html
+++ b/Project-2-submission/main.html
@@ -8,22 +8,21 @@
         <script src="./js/main.js"></script>
     </head>
     <body>
-      <h1>Search for gifs!</h1> 
-        <div>
-            <form id="searchForm">
-                <div>
-                    <input type="text" id="txtsearch" placeholder="enter text to search" maxlength="25">
-                    <button onclick="btnSearch()">search</button>
-                    <a href="#" onclick="lnkClear()">clear</a>
-                </div>  
-            </form>
+        <main>
+            <h1>Search for gifs!</h1> 
+                <main class="global-center-page">
+                     <form id="searchForm">
+                        <div>
+                            <input type="text" id="txtsearch" placeholder="enter text to search" maxlength="25">
+                            <button onclick="btnSearch()">search</button>
+                            <a href="#" onclick="lnkClear()">clear</a>
+                        </div>  
+                    </form>
             <p></p>
             <div id="divdisplayinfo" class="div-scroll-1">
             </div>
             <p></p>
-            <div>
-                <a href="#" onclick="giphyApiDemo1()">Giphy Api demo 1</a><br>            
-            </div>
             <p></p>
+        </main>
 </body>
 </html>
