--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -11,7 +11,7 @@
             <h1>Search for gifs!</h1> 
             <form>
                     <input type="text" id="TxtSearch" placeholder="Enter Text To Search" maxlength="25">
-                    <button>search</button>
+                    <button onclick="return btnSearch()">search</button>
                     <a href="#" onclick="TxtClear()">clear</a>
             </form>
             <p></p>
