--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -6,9 +6,19 @@
         <title>Project 2 Submission</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
+
     <body onload="PageLoad()">
-        <main class="global-center-page">
+        <header class="global-header">
+            <nav class="global-nav">
+                <ul>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </ul>
+            </nav>
             <h1>Search for gifs!</h1> 
+        </header>
+        <main class="global-center-page">
             <form>
                     <input type="text" id="TxtSearch" placeholder="Enter Text To Search" maxlength="25">
                     <button onclick="return btnSearch()">search</button>
