--- a/Project-2-submission/index.html
+++ b/Project-2-submission/index.html
@@ -12,8 +12,8 @@
             <nav class="global-nav">
                 <ul>
                     <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a >About</a>
+                    <a >Contact</a>
                 </ul>
             </nav>
             <h1>Search for gifs!</h1> 
