--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Project 3 Submission</title>
+        <link rel="stylesheet" href="./css/index.css">
+    </head>
+    <body>
+        <div class="Container">
+            <div class="ToDoApp">
+                <h2>To-Do List <img src="./img/logo.png"></h2>
+                <div class="InputField">
+                    <input type="text" id="TaskBox" placeholder="Enter a task">
+                    <button id="addTask">Add Task</button>
+                </div>
+                <ul id="TaskList">
+                    <li>Task 1</li>
+                    <li>Task 2</li>
+                    <li>Task 3</li>
+                </ul>
+            </div>    
+        </div>
+    </body> 
+</html>
