checked vs unchecked css

--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -14,7 +14,7 @@
                     <button id="addTask">Add Task</button>
                 </div>
                 <ul id="TaskList">
-                    <li>Task 1</li>
+                    <li class="checked">Task 1</li>
                     <li>Task 2</li>
                     <li>Task 3</li>
                 </ul>
