--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -8,17 +8,18 @@
     <body>
         <div class="Container">
             <div class="ToDoApp">
-                <h2>To-Do List <img src="./img/logo.png"></h2>
+                <h2>To-Do List <img src="./img/logo.png" alt="ToDo-Logo.png"></h2>
                 <div class="InputField">
-                    <input type="text" id="TaskBox" placeholder="Enter a task">
-                    <button id="addTask">Add Task</button>
+                    <input type="text" id="Task-Box" placeholder="Enter a task">
+                    <button onclick="AddTask()">Add Task</button>
                 </div>
-                <ul id="TaskList">
-                    <li class="checked">Task 1</li>
+                <ul id="Task-List">
+                    <!-- <li class="checked">Task 1</li>
                     <li>Task 2</li>
-                    <li>Task 3</li>
+                    <li>Task 3</li> -->
                 </ul>
             </div>    
         </div>
+        <script src="./js/index.js"></script>
     </body> 
 </html>
