submit with enter key
saves tasks to local data

--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -11,7 +11,7 @@
                 <h2>To-Do List <img src="./img/logo.png" alt="ToDo-Logo.png"></h2>
                 <div class="InputField">
                     <input type="text" id="Task-Box" placeholder="Enter a task">
-                    <button onclick="AddTask()">Add Task</button>
+                    <button id="Add-Task" onclick="AddTask()">Add Task</button>
                 </div>
                 <ul id="Task-List">
                     <!-- <li class="checked">Task 1</li>
