add  buttons to change todolist
buttons do not work, all items are now given class "unchecked" upon creation and that class is changed to "checked" when clicked to mark complete

--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -13,10 +13,15 @@
                     <input type="text" id="Task-Box" placeholder="Enter a task">
                     <button id="Add-Task" onclick="AddTask()">Add Task</button>
                 </div>
-                <ul id="Task-List">
+                <div class="Order-Tasks">
+                    <button id="SortBtn">all</button>
+                    <button id="SortBtn">completed</button>
+                    <button id="SortBtn">uncompleted</button>
+                    </div>
+                <ul id="Task-List" class="Task-List">
                     <!-- <li class="checked">Task 1</li>
-                    <li>Task 2</li>
-                    <li>Task 3</li> -->
+                    <li class= "unchecked">Task 2</li>
+                    <li class= "unchecked">Task 3</li> -->
                 </ul>
             </div>    
         </div>
