--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <div class="Container">
+            <nav>
+                <ul class="Nav-Links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
             <div class="ToDoApp">
                 <h2>To-Do List <img src="./img/logo.png" alt="ToDo-Logo.png"></h2>
                 <div class="InputField">
