filter buttons are working

--- a/Project-3-submission/index.html
+++ b/Project-3-submission/index.html
@@ -20,10 +20,10 @@
                     <button id="Add-Task" onclick="AddTask()">Add Task</button>
                 </div>
                 <div class="Order-Tasks">
-                    <button id="SortBtn">all</button>
-                    <button id="SortBtn">completed</button>
-                    <button id="SortBtn">uncompleted</button>
-                    </div>
+                    <button class="SortBtn" id="AllTaskBtn">All</button>
+                    <button class="SortBtn" id="CompleteTaskBtn">Complete</button>
+                    <button class="SortBtn" id="IncompleteTaskBtn">Incomplete</button>
+                </div>
                 <ul id="Task-List" class="Task-List">
                     <!-- <li class="checked">Task 1</li>
                     <li class= "unchecked">Task 2</li>
