visual changes to contact page

--- a/Project-3-submission/contact.html
+++ b/Project-3-submission/contact.html
@@ -17,7 +17,8 @@
             </div>
             <div>
                 <form action="https://formspree.io/f/mjkyvlnw" method="post">
-                    <h2>contact us</h2>
+                    <h2>Contact Us</h2>
+                    <p>Fill out the form below</p>
                         <table>
                             <tr class="td-form">
                             <td>First Name:</td>
