--- a/Project-3-submission/contact.html
+++ b/Project-3-submission/contact.html
@@ -15,7 +15,7 @@
                     </ul>
                 </nav>
             </div>
-            <div>
+            <div class="ContactForm">
                 <form action="https://formspree.io/f/mjkyvlnw" method="post">
                     <h2>Contact Us</h2>
                     <p>Fill out the form below</p>
